<resources>
    <string name="app_name">移动采编3.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newscenter">新闻媒体中心</string>
    <string name="all">全部稿件</string>
    <string name="sent">已发稿件</string>
    <string name="caiji">采集素材</string>
    <string name="interview">采访任务</string>
    <string name="text">今年以来，成都市大力开展村（社区）证明事项清理规范工作，共梳理出313项证明事项，依法取消了298项不合法、不合理以及为规避部门责任而要求群众提供的证明材料。除了婚育证明、经济困难证明、亲属证明等15个必要事项外，95%以上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证上的证明都被取消。</string>
    <string name="please_input">请输入</string>
    <string name="please_select">请选择</string>
    <string name="secret">保密</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="photos_num">%1$d张</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="commit_selectnum">确定(%1$d)</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="unlogin_tip">您确认要退出登录吗？</string>
    <string name="exit_tip">您确认要退出吗？</string>
    <string name="noNetWork">发生网络错误,请联网后重试</string>
    <string name="numAndLettter">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="crop__done">确认</string>
    <string name="crop__cancel">取消</string>
    <string name="crop__wait">请稍等</string>
    <string name="crop__saving">保存中</string>
    <string name="picker_title">%1$s年%2$s月%3$s日 %4$s:00</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours"></string>
    <string name="pickerview_minutes"></string>
    <string name="pickerview_seconds">秒</string>
    <string name="all_images">全部图片</string>
    <string name="in_process">视频处理中...</string>
    <string-array name="zodiacs">
        <item>水瓶座</item>
        <item>双鱼座</item>
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
    </string-array>
    <string-array name="education">
        <item>小学</item>
        <item>初中</item>
        <item>高中</item>
        <item>大专</item>
        <item>本科</item>
        <item>研究生及以上</item>
    </string-array>
    <string-array name="profession">
        <item>学生</item>
        <item>军人</item>
        <item>政府机构</item>
        <item>事业单位</item>
        <item>教师</item>
        <item>IT</item>
        <item>广告传媒</item>
        <item>司机</item>
        <item>科研人员</item>
    </string-array>
    <string name="Files">JWZT_PHOTOS</string>
    <string name="Image">Image</string>
    <string name="Thumbnail">Thumbnail</string>
    <string name="Video">Video</string>
    <string name="save">保存</string>
    <string name="save1">完成</string>
    <string name="apply">应用</string>
    <string name="stickers">贴图</string>
    <string name="fliter">滤镜</string>
    <string name="crop">裁剪</string>
    <string name="rotate">旋转</string>
    <string name="materialcolorpicker__app_name">颜色选择</string>
    <string name="materialcolorpicker__descLib">颜色选择</string>
    <string name="materialcolorpicker__errHex">混色</string>
    <string name="materialcolorpicker__inputColor">颜色:</string>
    <string name="materialcolorpicker__btnSelectColor">选择</string>
    <string name="saving_image">保存</string>
    <string name="input_hint">输入文本</string>
    <string-array name="fliters">
        <item>原始</item>
        <item>软化</item>
        <item>黑色</item>
        <item>经典</item>
        <item>gorgeous</item>
        <item>retro</item>
        <item>grace</item>
        <item>电影</item>
        <item>记忆</item>
        <item>yogurt</item>
        <item>年轮</item>
        <item>阳光</item>
    </string-array>
    <string name="no_choose">please choose a image for edit</string>
    <string name="choose_image">choose a image for edit</string>
    <string name="edit_image">编辑图片</string>
    <string name="save_path">保存路径 : %s</string>
    <string name="take_photo">拍照</string>
    <string name="no_network_error">当前网络不可用，请检查网络设置。</string>
    <string name="user_or_password_error">用户名或密码错误！</string>
    <string name="loginInfoNull">请输入用户名及密码。</string>
    <string name="warningIPNull">请设置IP和站点名</string>
    <string name="login_time_out_error">登录超时，请检查服务器ip和端口号</string>
    <string name="logining">正在登录...</string>
    <string name="speaker">音量</string>
    <string name="push_to_talk_text">按住说</string>
    <string name="duplex">全双工</string>
    <string name="halfDuplex">半双工</string>
    <string name="fullDuplex">全双工</string>
    <string name="commander_not_online">指挥端不在线</string>
    <string name="calling">正在连线</string>
    <string name="CallerMethod">呼叫方式</string>
    <string name="video_call">视频呼叫</string>
    <string name="Response_Accept">接受邀请</string>
    <string name="Response_Reject">拒绝邀请</string>
    <string name="NoResponse">无应答</string>
    <string name="NoAvailable">不在线</string>
    <string name="busy">正在通话</string>
    <string name="callfrom">呼叫来自于</string>
    <string name="ManagerWebFailure">登录管理网站失败</string>
    <string name="Response_Busy">用户忙碌</string>
    <string name="incall_notif_active">音频呼叫</string>
    <string name="incall_notif_paused">呼叫停止</string>
    <string name="incall_notif_video">视频呼叫</string>
    <string name="notification_started">开始</string>
    <string name="notification_registered">注册 %s </string>
    <string name="notification_register_failure">注册失败 %s</string>
    <string name="pref_video_initiate_call_with_video_key">pref_video_initiate_call_with_video_key</string>
    <string name="error_network_unreachable">Network is unreachable</string>
    <string name="tunnel_mode_entry_value_always">always</string>
    <string name="tunnel_mode_entry_value_3G_only">3G_only</string>
    <string name="tunnel_mode_entry_value_auto">auto</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_key">pref_transport_key</string>
    <string name="pref_transport_udp_key">pref_transport_udp_key</string>
    <string name="pref_transport_tcp_key">pref_transport_tcp_key</string>
    <string name="pref_transport_tls_key">pref_transport_tls_key</string>
    <string name="pref_video_use_front_camera_key">pref_video_use_front_camera_key</string>
    <string name="pref_video_codec_h263_key">pref_video_codec_h263_key</string>
    <string name="pref_video_codec_mpeg4_key">pref_video_codec_mpeg4_key</string>
    <string name="pref_video_codec_h264_key">pref_video_codec_h264_key</string>
    <string name="pref_wifi_only_key">pref_wifi_only_key</string>
    <string name="pref_transport_use_random_ports_key">pref_transport_use_random_ports_key</string>
    <string name="pref_push_notification_key">pref_push_notification_key</string>
    <string name="push_reg_id_key">push_reg_id_key</string>
    <string name="push_sender_id_key">push_sender_id_key</string>
    <string name="pref_debug_key">pref_debug_key</string>
    <string name="pref_background_mode_key">pref_background_mode_key</string>
    <string name="pref_animation_enable_key">pref_animation_enable_key</string>
    <string name="pref_autostart_key">pref_autostart_key</string>
    <string name="pref_auto_accept_friends_key">pref_auto_accept_friends_key</string>
    <string name="pref_image_sharing_server_key">pref_image_sharing_server_key</string>
    <string name="pref_remote_provisioning_key">pref_remote_provisioning_key</string>
    <string name="profile_video_size">Video Size</string>
    <string name="pref_disable_account_key">pref_disable_account_key</string>
    <string name="pref_extra_accounts">pref_nb_accounts_extra</string>
    <string name="pref_default_account_key">pref_default_account</string>
    <string name="pref_prefix_key">pref_prefix_key</string>
    <string name="pref_proxy_key">pref_proxy_key</string>
    <string name="pref_domain_key">pref_domain_key</string>
    <string name="pref_passwd_key">pref_passwd_key</string>
    <string name="pref_username_key">pref_username_key</string>
    <string name="pref_auth_userid_key">pref_auth_userid_key</string>
    <string name="pref_wizard_key">pref_wizard_key</string>
    <string name="pref_activated_key">pref_activated_key</string>
    <string name="pref_expire_key">pref_expire_key</string>
    <string name="pref_enable_outbound_proxy_key">Outbound proxy</string>
    <string name="push_sender_id">622464153529</string>
    <string name="pref_video_codec_vp8_key">pref_video_codec_vp8_key</string>
    <string name="pref_video_enable_key">pref_video_enable_key</string>
    <string name="signin">签收</string>
    <string name="addressbook_label">GoLive</string>
    <string name="progress_dialog_loading">加载中...</string>
    <string name="progress_dialog_saving">保存中...</string>
    <string name="back">返回</string>
    <string name="drawPhoto_actionName">图片处理</string>
    <string name="drawPhoto_draw">涂鸦</string>
    <string name="drawPhoto_actioning">处理中..</string>
    <string name="publishsell_publish">发布</string>
    <string name="layout_draw_retake">撤销</string>
    <string name="layout_draw_photo">涂马赛克</string>
    <string name="layout_draw_finish">保存</string>
    <string name="title_section1">主题</string>
    <string name="title_section2">主题2</string>
    <string name="title_section3">主题3</string>
    <string name="storage_is_full">储存卡已满</string>
    <string name="max_length_reached">已到达录制最大限制</string>
    <string name="audio_db_artist_name">精视</string>
    <string name="audio_db_album_name">采访录音</string>
    <string name="audio_db_playlist_name">我的采访录音列表</string>
    <string name="error_mediadb_new_record">不能保存录音</string>
    <string name="accept">完成</string>
    <string name="discard">放弃</string>
    <string name="button_ok">确认</string>
    <string name="cance">取消</string>
    <string name="longin">登录</string>
    <string name="longining">登录中</string>
    <string name="applaguage_chinese">中文</string>
    <string name="applaguage_english">English</string>
    <string name="iptips">请输入IP地址</string>
    <string name="accounttips">请输入用户名</string>
    <string name="passwordtips">请输入密码</string>
    <string name="checkip">请输入正确的IP地址</string>
    <string name="checkaccount">请输入正确的用户名</string>
    <string name="checkpassword">请输入正确的密码</string>
    <string name="longintips">用户名或密码不正确</string>
    <string name="menucapturelive">直播</string>
    <string name="menureport">报导</string>
    <string name="menucamera">摄像</string>
    <string name="menusoundrecord">录音</string>
    <string name="menumediadb">媒体库</string>
    <string name="menuset">设置</string>
    <string name="settingmedia">多媒体设置</string>
    <string name="settingmetadata">METADATA</string>
    <string name="settinggroup">分组信息</string>
    <string name="settinggesture">手势密码</string>
    <string name="settinghelp">帮助</string>
    <string name="settingabout">关于</string>
    <string name="settingquit">退出</string>
    <string name="settingdefault">默认</string>
    <string name="settings">设置</string>
    <string name="addreport">加入报导</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="livetime">%1$02d:%2$02d:%3$02d</string>
</resources>