<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2B3552"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_high"
        android:layout_marginBottom="@dimen/title_bar_margin_bottom"
        android:background="@drawable/showback_bg"
        android:visibility="gone"
        >

        <ImageButton
            android:id="@+id/title_bar_left_btn"
            style="@style/title_bar_left_imgbtn"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ssdk_back_arr" >
        </ImageButton>

        <com.jwzt.caibian.view.FontTextView
            android:id="@+id/title_bar_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_draw_photo" />

        <Button
            android:id="@+id/title_bar_right_btn"
            style="@style/black_btn_style"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="@string/publishsell_publish"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/draw_photo_view_parent"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:background="#2B3552"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/draw_photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>


    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="#f4f4f4"
        android:layout_alignParentBottom="true"
        >
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.jwzt.caibian.view.FontTextView
            android:id="@+id/draw_photo_cancel"
            style="@style/deal_image_bottom_textview_style"
            android:text="@string/layout_draw_retake"
            android:textSize="13sp" 
            android:visibility="gone"
            />
        
        
        <ImageView 
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/msk"
            android:layout_marginLeft="10dp"
            
            />
        
        
        

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="44dip"
            android:layout_weight="3"
            android:background="#f4f4f4"
            android:gravity="center"
            android:textColor="@drawable/selector_deal_photo_text"
            android:textSize="@dimen/dialog_title_bar_text_size" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/contacts1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/contacts2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="11dp"
                        android:src="@drawable/contacts3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5.5dp"
                        android:paddingLeft="-11dp"
                        android:paddingRight="-9dp"
                        android:src="@drawable/contacts4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:src="@drawable/contacts5" />
                </LinearLayout>
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                style="@android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:max="100"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/contacts_green"
                
                 />
        </RelativeLayout>

        
        
        <ImageView 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/xpc"
            android:visibility="invisible"
            />
        
        
        <com.jwzt.caibian.view.FontTextView
            android:id="@+id/draw_ok_text"
            style="@style/deal_image_bottom_textview_style"
            android:text="@string/layout_draw_finish"
            android:visibility="gone"
            android:textSize="13sp" />
        </LinearLayout>
        
    
    
    
    
    
    
    
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="#CCCCCC"
        />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        >
        
      
        
        
        <LinearLayout 
            android:id="@+id/back_to_main"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
            >
        
        <ImageView
	        android:layout_width="15dp"
	        android:layout_height="15dp"
	        android:src="@drawable/image_edit_back1" />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/back_return"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
	        android:layout_centerInParent="true"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
            >
        <ImageView
	        android:layout_width="15dp"
	        android:layout_height="15dp"
	        android:src="@drawable/ic_return" />
        </LinearLayout>
         <LinearLayout 
          	 android:id="@+id/back_apply"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:gravity="center"
            >
        <ImageView
	        android:layout_width="15dp"
	        android:layout_height="15dp"
	        android:src="@drawable/ic_img_apply" />
        </LinearLayout>
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="#CCCCCC"
        />
    
        
        
    </LinearLayout>

</RelativeLayout>